modificacion html y javascript

--- a/indexTRY.html
+++ b/indexTRY.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="container"
-        <p class="">Propietario del  vehiculo</p>
+        <p> class="">Propietario del  vehiculo</p>
         <input type="text" placeholder="Propietario del vehiculo"></div>
        
     <div id="container"> 
