--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     </main>
 
     <script src="./script/scribt.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
