modificacion html y javascript

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         alt="Perfil"
         title="Perfil Usuario"
         width="300" height="300">
-        <form action="">
+        <form action="" id="form">
             <p>Registrar Informacion</p>
 
             <div class="container"></div>
